# simdiatokens-v2

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DEPLOY.md  FEATURES.md  GITHUB_PUSH.md  PROXY_CHECKLIST.md  PROXY_SETUP.md  TokensAitm.md  docker-compose.yml  railpack.json  test_local.sh
.github/workflows/: ci-cd.yml
SimdiaTokens/: .dockerignore  prompts.txt  railway.toml
SimdiaTokens-frontend/: Dockerfile  README.md  package-lock.json  package.json  vercel.json
SimdiaTokens-frontend/src/: middleware.ts  proxy.ts
SimdiaTokens-frontend/src/app/: globals.css  layout.tsx  page.tsx
SimdiaTokens-frontend/src/hooks/: use-auth.tsx  use-decrypted-data.ts  use-inbox.ts  use-keyboard-shortcuts.ts  use-tokens.ts
SimdiaTokens-frontend/src/lib/: api.ts  crypto.ts  polling.tsx  utils.ts
SimdiaTokens-frontend/src/types/: token.ts
SimdiaTokens/simdiatokens_server/: .dockerignore  Cargo.toml  Dockerfile
SimdiaTokens/simdiatokens_server/config/: ua_list.txt
SimdiaTokens/simdiatokens_server/src/: ai_analysis.rs  audit.rs  auth.rs  bec.rs  calendar.rs  campaigns.rs  contacts.rs  cookie_capture.rs  cookie_client.rs  graph_client.rs  inbox_folders.rs  lure.rs  main.rs  office_apps.rs  onedrive.rs  proxy.rs  proxy_security.rs  proxy_session.rs  recon.rs  response_crypto.rs  rules.rs  scheduler.rs  settings.rs  stealth.rs  tasks.rs  teams.rs  tenant_utils.rs  vault.rs
SimdiaTokens/simdiatokens_server/static/: robots.txt
SimdiaTokens/worker/simdiatokens-oauth-worker/: .wrangler.env  package-lock.json  package.json  wrangler.jsonc
(+54 files in other folders)
