[package]
name = "simdiatokens_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.10.0"
actix-rt = "2.11.0"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "socks", "multipart"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
rand = "0.8.5"
rand_core = "0.6.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures-util = "0.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
argon2 = "0.5"
jsonwebtoken = "9"
actix-web-httpauth = "0.8"
hickory-resolver = "0.24"

[dev-dependencies]
wiremock = "0.6"
